# array

./: .gitignore  CApplication.cpp  CApplication.h  CArray.h  CArray.hpp  CArrayException.cpp  CArrayException.h  CMakeLists.txt  CRandom.cpp  CRandom.h  build.bat  main.cpp
test/: CMakeLists.txt  main.cpp  test.bat
